syntax = "proto3";

option java_package = "com.hnair.hello";

service HelloService {
  rpc sayHello(HelloRequest) returns (HelloResponse);
}

message HelloRequest{
  string name = 1;
}

message HelloResponse{
  string words = 1;
}

